--- a/Phase9/Makefile
+++ b/Phase9/Makefile
@@ -58,7 +58,7 @@ OS_NAME = MyOS
 #       NOTE: Keep the spaces around the equals sign (=) please.
 #	If this changes, run "make depend" to update $OBJECTS.
 #
-SRC = entry.S kernel.c proc.c services.c syscalls.c tools.c 
+SRC = entry.S kernel.c proc.c proc_syscalls.c services.c tools.c 
 
 #
 #  (3) Add any compiler options you want.  They will be passed to gcc386
@@ -277,7 +277,7 @@ help ::
 #  List of object files.
 #### YQYQYQ-MARK-1 ####
 
-OBJECTS =  entry.o kernel.o proc.o services.o syscalls.o tools.o
+OBJECTS =  entry.o kernel.o proc.o proc_syscalls.o services.o tools.o
 
 #### YQYQYQ-STOP-1 ####
 #-------------------------------------
@@ -331,7 +331,7 @@ $(MY_DLI) :	$(OBJECTS) Makefile
 #  Dependencies.
 #### YQYQYQ-MARK-2 ####
 #
-#  Dependencies generated Tue Feb 20 23:13:16 PST 2018 by (spede-mkmf $Revision: 1.2 $/1)
+#  Dependencies generated Sun Apr 29 00:38:15 PDT 2018 by (spede-mkmf $Revision: 1.2 $/1)
 #
 
 entry.o: entry.S kernel_constants.h \
@@ -368,7 +368,9 @@ proc.o: proc.c spede.h \
  /gaia/home/project/spede2/Target-i386/i686/gnu/i386-unknown-gnu/include/spede/machine/seg.h \
  /gaia/home/project/spede2/Target-i386/i686/gnu/i386-unknown-gnu/include/spede/machine/asmacros.h \
  /gaia/home/project/spede2/Target-i386/i686/gnu/i386-unknown-gnu/include/spede/machine/rs232.h \
- kernel_data.h kernel_types.h kernel_constants.h syscalls.h proc.h
+ kernel_data.h kernel_types.h kernel_constants.h syscalls.h proc.h \
+ tools.h
+proc_syscalls.o: proc_syscalls.c kernel_constants.h kernel_types.h
 services.o: services.c spede.h \
  /gaia/home/project/spede2/Target-i386/i686/gnu/i386-unknown-gnu/include/spede/flames.h \
  /gaia/home/project/spede2/Target-i386/i686/gnu/i386-unknown-gnu/include/spede/sys/cdefs.h \
@@ -386,7 +388,6 @@ services.o: services.c spede.h \
  /gaia/home/project/spede2/Target-i386/i686/gnu/i386-unknown-gnu/include/spede/machine/rs232.h \
  kernel_types.h kernel_constants.h kernel_data.h services.h tools.h \
  proc.h
-syscalls.o: syscalls.c kernel_constants.h
 tools.o: tools.c spede.h \
  /gaia/home/project/spede2/Target-i386/i686/gnu/i386-unknown-gnu/include/spede/flames.h \
  /gaia/home/project/spede2/Target-i386/i686/gnu/i386-unknown-gnu/include/spede/sys/cdefs.h \
